wrapping fix. Fix uso de plugin

--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "cordova-android": "^9.1.0",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-flashlight": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^4.0.0",
     "cordova-plugin-mathcalculator": "github:midgi/cordova-plugin-mathcalculator",
@@ -77,6 +79,7 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-flashlight": {},
       "cordova-plugin-mathcalculator": {}
     },
     "platforms": [
